# CMakeList.txt : CMake project for CMakeProject-1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeProject-1 "CMakeProject-1.cpp" "CMakeProject-1.h" "log.h" "loglib.cpp")

# TODO: Add tests and install targets if needed.
